Force install Gunicorn

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,12 +9,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Install deps FIRST
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir gunicorn
 
-# Copy project
 COPY . .
 
-# Render provides $PORT
+
 CMD sh -c "python manage.py migrate && gunicorn --bind 0.0.0.0:$PORT secrets_app.wsgi:application"
